--- a/app/src/main/res/layout/item_daily_routine_add_card.xml
+++ b/app/src/main/res/layout/item_daily_routine_add_card.xml
@@ -8,11 +8,12 @@
         android:id="@+id/tv_daily_routine_add_card"
         android:layout_width="280dp"
         android:layout_height="398dp"
-        app:layout_constraintDimensionRatio="0.7"
+        android:layout_marginVertical="65dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_daily_routine_card"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="0.7"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,11 +23,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
         android:gravity="center"
+        android:lineSpacingExtra="4dp"
         android:text="@string/daily_routine_add_card_name"
         android:textAppearance="@style/head1"
-        android:lineSpacingExtra="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tv_daily_routine_add_card"
+        app:layout_constraintStart_toStartOf="@id/tv_daily_routine_add_card"
         app:layout_constraintTop_toTopOf="parent" />
 
 
