--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -85,6 +85,7 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_daily"
                 app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_yet_fin_first"
+                app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toStartOf="@id/tv_daily_routine_add_name_first"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -95,13 +96,13 @@
                 android:id="@+id/tv_daily_routine_add_name_first"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="75dp"
+                android:layout_marginEnd="50dp"
                 android:lineSpacingExtra="4dp"
-                android:text="@string/daily_routine_user_add"
                 android:scrollHorizontally="false"
+                android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="50dp"
-                android:layout_marginStart="75dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_first" />
 
@@ -132,6 +133,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@{viewModel.isRoutineAchieveFirst ? @drawable/shape_gray100_fill_10_rect : @drawable/shape_main1_fill_10_rect}"
                 android:clickable="@{!viewModel.isRoutineAchieveFirst}"
@@ -145,7 +147,8 @@
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_ing_first" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -185,6 +188,7 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_daily"
                 app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_yet_fin_second"
+                app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toStartOf="@id/tv_daily_routine_add_name_second"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -195,13 +199,13 @@
                 android:id="@+id/tv_daily_routine_add_name_second"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="75dp"
+                android:layout_marginEnd="50dp"
                 android:lineSpacingExtra="4dp"
-                android:text="@string/daily_routine_user_add"
                 android:scrollHorizontally="false"
+                android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="50dp"
-                android:layout_marginStart="75dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_second" />
 
@@ -224,7 +228,6 @@
                 android:text="@{@string/daily_routine_ing(viewModel.dailyRoutineListResponse[1].achieveCount)}"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
-                app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_yet_fin_second"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_routine_fin_second"
                 app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_add_name_second" />
 
@@ -233,7 +236,7 @@
                 android:layout_width="0dp"
                 android:layout_height="38dp"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="82dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@{viewModel.isRoutineAchieveSecond ? @drawable/shape_gray100_fill_10_rect : @drawable/shape_main1_fill_10_rect}"
                 android:clickable="@{!viewModel.isRoutineAchieveSecond}"
@@ -245,7 +248,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_ing_second" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -280,24 +283,27 @@
                 android:layout_marginTop="22dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="35dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_daily"
                 app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_yet_fin_third"
                 app:layout_constraintEnd_toStartOf="@id/tv_daily_routine_add_name_third"
-                android:src="@drawable/ic_daily"
-                android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_daily_routine_add_name_third"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="75dp"
+                android:layout_marginEnd="50dp"
                 android:lineSpacingExtra="4dp"
-                android:text="@string/daily_routine_user_add"
                 android:scrollHorizontally="false"
+                android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="50dp"
-                android:layout_marginStart="75dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_third" />
 
@@ -320,7 +326,6 @@
                 android:text="@{@string/daily_routine_ing(viewModel.dailyRoutineListResponse[2].achieveCount)}"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
-                app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_yet_fin_third"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_routine_fin_third"
                 app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_add_name_third" />
 
@@ -329,7 +334,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="82dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@{viewModel.isRoutineAchieveThird ? @drawable/shape_gray100_fill_10_rect : @drawable/shape_main1_fill_10_rect}"
                 android:clickable="@{!viewModel.isRoutineAchieveThird}"
@@ -344,7 +349,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_ing_third" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
