#101 [ui] item 이미지 로드 중 기본 이미지 삽입

--- a/app/src/main/res/layout/item_happy_add_list.xml
+++ b/app/src/main/res/layout/item_happy_add_list.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/chip_happy_add_component"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="101dp"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/shape_white_fill_gray000_stroke_radius_20">
 
@@ -20,7 +20,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="22dp"
             android:layout_marginBottom="22dp"
-            android:src="@drawable/ic_happy_red"
+            android:src="@drawable/ic_bear_base"
             app:layout_constraintBottom_toBottomOf="@id/chip_happy_add_component"
             app:layout_constraintStart_toStartOf="@id/chip_happy_add_component"
             app:layout_constraintTop_toTopOf="@id/chip_happy_add_component" />
