--- a/app/src/main/res/layout/fragment_happy_delete.xml
+++ b/app/src/main/res/layout/fragment_happy_delete.xml
@@ -40,11 +40,11 @@
             android:id="@+id/iv_happy_delete_mention"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="87dp"
+            android:layout_marginBottom="19dp"
             android:src="@drawable/ic_speech_happy"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@id/tv_happy_delete_subtitle" />
 
         <TextView
             android:id="@+id/tv_happy_delete_mention"
@@ -63,22 +63,22 @@
             style="@style/head1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_happy_delete_mention"
+            app:layout_constraintBottom_toTopOf="@id/cl_happy_delete_card_front"
             tools:text="성숙한 사랑을 만나기 위한" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_happy_delete_card_front"
             android:layout_width="280dp"
             android:layout_height="398dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginBottom="41dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_happy_delete_subtitle">
+            app:layout_constraintBottom_toTopOf="@id/btn_happy_delete_clear">
 
             <ImageView
                 android:id="@+id/iv_happy_delete_card_front"
