#101 [ui] 앱버튼 그림자 삭제

--- a/app/src/main/res/layout/activity_happy_add_detail.xml
+++ b/app/src/main/res/layout/activity_happy_add_detail.xml
@@ -32,9 +32,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="18dp"
             android:textColor="@color/happyroutine_red"
+            app:layout_constraintBottom_toTopOf="@id/iv_happy_add_detail_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/iv_happy_add_detail_icon"
             tools:text="@string/chip_item_happy_relationship" />
 
         <ImageView
@@ -42,9 +42,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@id/tv_happy_add_detail_subtitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_happy_add_detail_subtitle"
             tools:src="@drawable/ic_happy_bling_red" />
 
         <TextView
@@ -53,9 +53,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@id/vp_happy_add_detail_card"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/vp_happy_add_detail_card"
             tools:text="성숙한 사랑을 하기 위한" />
 
         <androidx.viewpager2.widget.ViewPager2
@@ -65,9 +65,9 @@
             android:layout_marginBottom="30dp"
             android:clipChildren="false"
             android:clipToPadding="false"
+            app:layout_constraintBottom_toTopOf="@id/di_happy_add_detail_indicator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/di_happy_add_detail_indicator"
             app:layout_constraintVertical_bias="0" />
 
         <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
@@ -81,9 +81,9 @@
             app:dotsSize="6dp"
             app:dotsSpacing="6dp"
             app:dotsWidthFactor="1"
+            app:layout_constraintBottom_toTopOf="@id/btn_happy_detail_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_happy_detail_add"
             app:selectedDotColor="@color/main1" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -95,6 +95,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="34dp"
             android:background="@drawable/shape_black_fill_12_rect"
+            android:outlineProvider="none"
             android:text="@string/happy_detail_button"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
