--- a/app/src/main/res/layout/item_daily_routine_add_card.xml
+++ b/app/src/main/res/layout/item_daily_routine_add_card.xml
@@ -19,16 +19,17 @@
 
     <TextView
         android:id="@+id/tv_daily_routine_add_card_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
+        android:layout_marginHorizontal="44dp"
         android:gravity="center"
         android:lineSpacingExtra="4dp"
         android:text="@string/daily_routine_add_card_name"
         android:textAppearance="@style/head1"
-        app:layout_constraintEnd_toEndOf="@id/tv_daily_routine_add_card"
-        app:layout_constraintStart_toStartOf="@id/tv_daily_routine_add_card"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_daily_routine_add_card" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
