#92 [hotfix] edittext 줄 수 제한

--- a/app/src/main/res/layout/fragment_onboarding_bear_naming.xml
+++ b/app/src/main/res/layout/fragment_onboarding_bear_naming.xml
@@ -66,9 +66,11 @@
             android:background="@drawable/shape_white_fill_gray200_stroke_radius_99_rect"
             android:gravity="center"
             android:hint="@string/bear_naming_hint"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:maxLines="1"
             android:paddingTop="12dp"
             android:paddingBottom="11dp"
-            android:inputType="text"
             android:text="@={viewModel.nickname}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -81,15 +83,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/bear_naming_warning"
+            android:text="@{viewModel.isLengthExceed?@string/bear_naming_length_warning : @string/bear_naming_special_character_warning}"
             android:textColor="@color/red"
-            android:visibility="@{viewModel.isSpecialCharacterEntered ? View.VISIBLE: View.INVISIBLE}"
+            android:visibility="@{viewModel.isWarning? View.VISIBLE: View.INVISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_bear_naming" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_bear_selection"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="57dp"
             android:layout_marginHorizontal="20dp"
@@ -98,7 +101,6 @@
             android:clickable="@{viewModel.isNickNameValid ? true : false}"
             android:enabled="@{viewModel.isNickNameValid ? true : false}"
             android:text="@string/bear_naming_button"
-            style="?android:attr/borderlessButtonStyle"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
             app:layout_constraintBottom_toBottomOf="parent"
