#109 [hotfix] 3배수 이미지에 맞게 기기 대응으로 변경

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,13 +39,15 @@
 
         <ImageView
             android:id="@+id/iv_login_bear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="100dp"
             android:layout_marginBottom="44dp"
             android:src="@drawable/ic_bear_brown_down"
             app:layout_constraintBottom_toTopOf="@id/btn_login_kakao"
-            app:layout_constraintEnd_toEndOf="@id/iv_login_logo"
-            app:layout_constraintStart_toStartOf="@id/iv_login_logo" />
+            app:layout_constraintDimensionRatio="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_login_kakao"
