--- a/app/src/main/res/layout/fragment_story_telling_conclusion.xml
+++ b/app/src/main/res/layout/fragment_story_telling_conclusion.xml
@@ -15,15 +15,18 @@
             android:id="@+id/iv_story_telling_main_spotlight"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_spotlight3" />
 
         <ImageView
             android:id="@+id/iv_story_telling_conclusion_door"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="75dp"
             android:layout_marginBottom="242dp"
             android:src="@drawable/ic_door"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1.84"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
