--- a/app/src/main/res/layout/fragment_story_telling_main.xml
+++ b/app/src/main/res/layout/fragment_story_telling_main.xml
@@ -15,6 +15,7 @@
             android:id="@+id/iv_story_telling_main_spotlight"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_spotlight2" />
 
         <ImageView
