--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,8 +43,9 @@
             android:id="@+id/iv_home_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="22dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="15dp"
+            android:padding="7dp"
             android:src="@drawable/ic_home_settings"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -53,8 +54,9 @@
             android:id="@+id/iv_home_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="6dp"
+            android:padding="7dp"
             android:src="@drawable/ic_home_money"
             app:layout_constraintEnd_toStartOf="@id/iv_home_setting"
             app:layout_constraintTop_toTopOf="parent" />
