--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="viewpager_margin">30dp</dimen>
+    <dimen name="snackbar_delete_margin_bottom">47dp</dimen>
+    <dimen name="snackbar_add_margin_bottom">147dp</dimen>
 </resources>
