--- a/app/src/main/res/layout/item_daily_routine_add_card.xml
+++ b/app/src/main/res/layout/item_daily_routine_add_card.xml
@@ -27,8 +27,8 @@
         android:lineSpacingExtra="4dp"
         android:text="@string/daily_routine_add_card_name"
         android:textAppearance="@style/head1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tv_daily_routine_add_card"
+        app:layout_constraintStart_toStartOf="@id/tv_daily_routine_add_card"
         app:layout_constraintTop_toTopOf="@id/tv_daily_routine_add_card" />
 
 
