--- a/app/src/main/res/layout/fragment_setting_user_exit.xml
+++ b/app/src/main/res/layout/fragment_setting_user_exit.xml
@@ -57,8 +57,8 @@
 
         <ImageView
             android:id="@+id/iv_user_exit_bear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="208dp"
+            android:layout_height="208dp"
             android:src="@drawable/ic_bear_brown_crying"
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@id/tv_user_exit_speech"
