--- a/app/src/main/res/layout/fragment_setting_user_exit.xml
+++ b/app/src/main/res/layout/fragment_setting_user_exit.xml
@@ -12,7 +12,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/tv_user_exit_title"
@@ -65,45 +66,37 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_user_exit_back"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@string/user_exit_back"
+            android:textAppearance="@style/body1"
+            android:textColor="@color/gray300"
+            android:background="@drawable/shape_gray100_fill_12_rect"
+            android:paddingVertical="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginBottom="33dp"
-            android:layout_marginHorizontal="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_chainStyle="spread_inside">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_user_exit_exit"
+            android:outlineProvider="none" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_user_exit_back"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/user_exit_back"
-                android:textAppearance="@style/body1"
-                android:textColor="@color/gray300"
-                android:background="@drawable/shape_gray100_fill_12_rect"
-                android:paddingVertical="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/btn_user_exit_exit" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_user_exit_exit"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:text="@string/user_exit_exit"
-                android:textAppearance="@style/body1"
-                android:textColor="@color/gray000"
-                android:background="@drawable/shape_red_fill_12_rect"
-                android:layout_marginStart="10dp"
-                app:layout_constraintTop_toTopOf="@id/btn_user_exit_back"
-                app:layout_constraintBottom_toBottomOf="@id/btn_user_exit_back"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btn_user_exit_back" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_user_exit_exit"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="@string/user_exit_exit"
+            android:textAppearance="@style/body1"
+            android:textColor="@color/gray000"
+            android:background="@drawable/shape_red_fill_12_rect"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintTop_toTopOf="@id/btn_user_exit_back"
+            app:layout_constraintBottom_toBottomOf="@id/btn_user_exit_back"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btn_user_exit_back"
+            android:outlineProvider="none" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
