#138 [chore] placeholder 기본이미지 규격 통일

--- a/app/src/main/res/layout/item_happy_add_list.xml
+++ b/app/src/main/res/layout/item_happy_add_list.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/iv_happy_list_item_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="57dp"
+            android:layout_height="57dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="22dp"
             android:layout_marginBottom="22dp"
