#138 [ui] 카드 로딩 전 기본이미지 설정(임시 카드이미지 사용)

--- a/app/src/main/res/layout/fragment_happy_my_routine.xml
+++ b/app/src/main/res/layout/fragment_happy_my_routine.xml
@@ -199,7 +199,7 @@
                     android:id="@+id/iv_happy_progress_card_front"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    setCoilImage="@{viewModel.happyProgressResponse.contentImageUrl}"
+                    setHappyCoilImage="@{viewModel.happyProgressResponse.contentImageUrl}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
