--- a/app/src/main/res/layout/activity_happy_add_detail.xml
+++ b/app/src/main/res/layout/activity_happy_add_detail.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_happy_add_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background">
