--- a/app/src/main/res/layout/activity_happy_add_list.xml
+++ b/app/src/main/res/layout/activity_happy_add_list.xml
@@ -8,6 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_happy_add_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background"
